--- a/modules/openapi-generator/src/main/resources/Java/libraries/feign/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/feign/ApiClient.mustache
@@ -100,9 +100,9 @@ public class ApiClient {
       {{#isBasicBasic}}
         auth = new HttpBasicAuth();
       {{/isBasicBasic}}
-      {{^isBasicBasic}}
+      {{#isBasicBearer}}
         auth = new HttpBearerAuth("{{scheme}}");
-      {{/isBasicBasic}}
+      {{/isBasicBearer}}
       {{/isBasic}}
       {{#isApiKey}}
         auth = new ApiKeyAuth({{#isKeyInHeader}}"header"{{/isKeyInHeader}}{{#isKeyInQuery}}"query"{{/isKeyInQuery}}{{#isKeyInCookie}}"cookie"{{/isKeyInCookie}}, "{{keyParamName}}");
