--- a/modules/openapi-generator/src/main/resources/Java/libraries/retrofit/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/retrofit/ApiClient.mustache
@@ -65,9 +65,9 @@ public class ApiClient {
             {{#isBasicBasic}}
                 auth = new HttpBasicAuth();
             {{/isBasicBasic}}
-            {{^isBasicBasic}}
+            {{#isBasicBearer}}
                 auth = new HttpBearerAuth("{{scheme}}");
-            {{/isBasicBasic}}
+            {{/isBasicBearer}}
             {{/isBasic}}
             {{#isApiKey}}
                 auth = new ApiKeyAuth({{#isKeyInHeader}}"header"{{/isKeyInHeader}}{{#isKeyInQuery}}"query"{{/isKeyInQuery}}{{#isKeyInCookie}}"cookie"{{/isKeyInCookie}}, "{{keyParamName}}");
