--- a/modules/openapi-generator/src/main/resources/typescript-fetch/README.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-fetch/README.mustache
@@ -3,15 +3,18 @@
 This generator creates TypeScript/JavaScript client that utilizes [Fetch API](https://fetch.spec.whatwg.org/). The generated Node module can be used in the following environments:
 
 Environment
+
 * Node.js
 * Webpack
 * Browserify
 
 Language level
+
 * ES5 - you must have a Promises/A+ library installed
 * ES6
 
 Module system
+
 * CommonJS
 * ES6 module system
 
@@ -20,7 +23,8 @@ It can be used in both TypeScript and JavaScript. In TypeScript, the definition 
 ### Building
 
 To build and compile the typescript sources to javascript use:
-```
+
+```shell
 npm install
 npm run build
 ```
@@ -35,11 +39,12 @@ navigate to the folder of your consuming project and run one of the following co
 
 _published:_
 
-```
+```shell
 npm install {{npmName}}@{{npmVersion}} --save
 ```
 
 _unPublished (not recommended):_
 
-```
+```shell
 npm install PATH_TO_GENERATED_PACKAGE --save
+```
