Improving Docs of TypeScript-Axios, TypesScript-Fetch

--- a/modules/openapi-generator/src/main/resources/typescript-fetch/api_doc.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-fetch/api_doc.mustache
@@ -22,7 +22,7 @@ All URIs are relative to *{{basePath}}*
 ### Example
 
 ```typescript
-import * as {{{apiModuleClassName}}} from '{{{npmName}}}';
+import * as {{apiModuleClassName}} from '{{{npmName}}}';
 
 {{#useSingleRequestParameter}}
 const configuration = {{{apiModuleClassName}}}.createConfiguration();
