[kotlin-spring] add spring boot 3 and fix java EE imports

--- a/modules/openapi-generator/src/main/resources/kotlin-spring/exceptions.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-spring/exceptions.mustache
@@ -3,8 +3,14 @@ package {{apiPackage}}
 import org.springframework.http.HttpStatus
 import org.springframework.web.bind.annotation.ControllerAdvice
 import org.springframework.web.bind.annotation.ExceptionHandler
+{{#useJakartaEe}}
+import jakarta.servlet.http.HttpServletResponse
+import jakarta.validation.ConstraintViolationException
+{{/useJakartaEe}}
+{{^useJakartaEe}}
 import javax.servlet.http.HttpServletResponse
 import javax.validation.ConstraintViolationException
+{{/useJakartaEe}}
 
 // TODO Extend ApiException for custom exception handling, e.g. the below NotFound exception
 sealed class ApiException(msg: String, val code: Int) : Exception(msg)
