--- a/modules/openapi-generator/src/main/resources/kotlin-spring/apiInterface.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-spring/apiInterface.mustache
@@ -35,15 +35,14 @@ import org.springframework.web.context.request.NativeWebRequest
 import org.springframework.beans.factory.annotation.Autowired
 
 {{#useBeanValidation}}
+{{#useJakartaEe}}
+import jakarta.validation.Valid
+import jakarta.validation.constraints.*
+{{/useJakartaEe}}
+{{^useJakartaEe}}
+import javax.validation.constraints.*
 import javax.validation.Valid
-import javax.validation.constraints.DecimalMax
-import javax.validation.constraints.DecimalMin
-import javax.validation.constraints.Email
-import javax.validation.constraints.Max
-import javax.validation.constraints.Min
-import javax.validation.constraints.NotNull
-import javax.validation.constraints.Pattern
-import javax.validation.constraints.Size
+{{/useJakartaEe}}
 {{/useBeanValidation}}
 
 {{#reactive}}
