--- a/modules/openapi-generator/src/main/resources/kotlin-spring/model.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-spring/model.mustache
@@ -4,15 +4,14 @@ import java.util.Objects
 {{#imports}}import {{import}}
 {{/imports}}
 {{#useBeanValidation}}
-import javax.validation.constraints.DecimalMax
-import javax.validation.constraints.DecimalMin
-import javax.validation.constraints.Email
-import javax.validation.constraints.Max
-import javax.validation.constraints.Min
-import javax.validation.constraints.NotNull
-import javax.validation.constraints.Pattern
-import javax.validation.constraints.Size
+{{#useJakartaEe}}
+import jakarta.validation.Valid
+import jakarta.validation.constraints.*
+{{/useJakartaEe}}
+{{^useJakartaEe}}
+import javax.validation.constraints.*
 import javax.validation.Valid
+{{/useJakartaEe}}
 {{/useBeanValidation}}
 {{#swagger2AnnotationLibrary}}
 import io.swagger.v3.oas.annotations.media.Schema
