--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/built_value/class.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/built_value/class.mustache
@@ -11,16 +11,8 @@ part '{{classFilename}}.g.dart';
 {{>serialization/built_value/class_members}}
 }
 {{#discriminator}}{{#hasDiscriminatorWithNonEmptyMapping}}
-extension {{classname}}DiscriminatorExt on {{classname}} {
-    String? discriminatorValue() {
-        {{#mappedModels}}
-        if (this is {{modelName}}) {
-        return r'{{mappingName}}';
-        }
-        {{/mappedModels}}
-        return null;
-    }
-}{{/hasDiscriminatorWithNonEmptyMapping}}{{/discriminator}}
+{{>serialization/built_value/class_discriminator}}
+{{/hasDiscriminatorWithNonEmptyMapping}}{{/discriminator}}
 {{>serialization/built_value/class_serializer}}{{#vendorExtensions.x-is-parent}}
 
 {{>serialization/built_value/class_concrete}}{{/vendorExtensions.x-is-parent}}
