--- a/modules/openapi-generator/src/main/resources/typescript-fetch/apis.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-fetch/apis.mustache
@@ -267,7 +267,19 @@ export class {{classname}} extends runtime.BaseAPI {
             {{#bodyParam}}
             {{#isContainer}}
             {{^withoutRuntimeChecks}}
-            body: requestParameters.{{paramName}}{{#isArray}}{{#items}}{{^isPrimitiveType}}.map({{datatype}}ToJSON){{/isPrimitiveType}}{{/items}}{{/isArray}},
+            {{#isArray}}
+            {{#items}}
+            {{#isPrimitiveType}}
+            body: requestParameters.{{paramName}},
+            {{/isPrimitiveType}}
+            {{^isPrimitiveType}}
+            body: Array.from(requestParameters.{{paramName}}).map({{datatype}}ToJSON),
+            {{/isPrimitiveType}}
+            {{/items}}
+            {{/isArray}}
+            {{^isArray}}
+            body: requestParameters.{{paramName}},
+            {{/isArray}}
             {{/withoutRuntimeChecks}}
             {{#withoutRuntimeChecks}}
             body: requestParameters.{{paramName}},
