fixup! [typescript-fetch] Fix compilation bug when using unique items in request body

--- a/modules/openapi-generator/src/main/resources/typescript-fetch/apis.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-fetch/apis.mustache
@@ -270,7 +270,7 @@ export class {{classname}} extends runtime.BaseAPI {
             {{#isArray}}
             {{#items}}
             {{#isPrimitiveType}}
-            body: requestParameters.{{paramName}},
+            body: Array.from(requestParameters.{{paramName}}),
             {{/isPrimitiveType}}
             {{^isPrimitiveType}}
             body: Array.from(requestParameters.{{paramName}}).map({{datatype}}ToJSON),
