add conversion to support non-string params
Signed-off-by: Tom Hörberg <tom@hoerberg.de>

--- a/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
@@ -563,7 +563,7 @@ class ApiClient(object):
             else:
                 new_params.append((k, v))
 
-        return "&".join(["=".join(item) for item in new_params])
+        return "&".join(["=".join(str(item)) for item in new_params])
 
     def files_parameters(self, files=None):
         """Builds form parameters.
